--- a/Rock, scissors, paper/Base.lproj/Main.storyboard
+++ b/Rock, scissors, paper/Base.lproj/Main.storyboard
@@ -16,23 +16,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Xje-Qh-o8e">
-                                <rect key="frame" x="57.5" y="257" width="299" height="382"/>
+                            <stackView opaque="NO" contentMode="center" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Xje-Qh-o8e">
+                                <rect key="frame" x="34.5" y="257" width="345" height="382"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤖" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fpz-d0-AGG">
-                                        <rect key="frame" x="112" y="0.0" width="75" height="84"/>
+                                        <rect key="frame" x="135" y="0.0" width="75" height="84"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game State" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G2p-Ac-KXk">
-                                        <rect key="frame" x="86.5" y="114" width="126.5" height="30"/>
+                                        <rect key="frame" x="109.5" y="114" width="126.5" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="center" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Gyq-rE-fUK">
-                                        <rect key="frame" x="0.0" y="174" width="299" height="116"/>
+                                    <stackView opaque="NO" contentMode="center" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Gyq-rE-fUK">
+                                        <rect key="frame" x="20" y="174" width="305" height="116"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Mj-aJ-gcf">
                                                 <rect key="frame" x="0.0" y="0.0" width="99" height="116"/>
@@ -45,7 +45,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v7N-XN-vlL">
-                                                <rect key="frame" x="100" y="0.0" width="99" height="116"/>
+                                                <rect key="frame" x="103" y="0.0" width="99" height="116"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="👊">
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="70"/>
@@ -55,7 +55,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TXW-ss-BhG">
-                                                <rect key="frame" x="200" y="0.0" width="99" height="116"/>
+                                                <rect key="frame" x="206" y="0.0" width="99" height="116"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="✌️">
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="70"/>
@@ -67,7 +67,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VJg-9a-46g">
-                                        <rect key="frame" x="51" y="320" width="197.5" height="62"/>
+                                        <rect key="frame" x="74" y="320" width="197.5" height="62"/>
                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="play again">
@@ -78,6 +78,10 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Gyq-rE-fUK" firstAttribute="leading" secondItem="Xje-Qh-o8e" secondAttribute="leading" constant="20" id="Lli-H7-k89"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gyq-rE-fUK" secondAttribute="trailing" constant="20" id="xlK-GB-7CY"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
